fixed spacing in description

--- a/app/static/style/styles.css
+++ b/app/static/style/styles.css
@@ -42,10 +42,6 @@
     -webkit-text-stroke: 0.3px white;font-size: 1.8rem; padding: 10px
   }
 
-  .gamedesc{
-    color: black !important;
-    margin-bottom: 5px !important;
-  }
 
   .loginmarg{
     display: flex;
